Remove explicit height from links to avoid a scrollbar.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -56,7 +56,6 @@
     margin: 50px auto;
     display: flex;
     width: 260px;
-    height: 260px;
 }
 .link {
     font-family: "Chronicle SSm A", "Chronicle SSm B";
